<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<artifactId>becpg-parent</artifactId>
		<groupId>fr.becpg</groupId>
		<version>0.1.3</version>
		<relativePath>../</relativePath>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>becpg</groupId>
	<artifactId>becpg-core</artifactId>
	<packaging>amp</packaging>
	<name>beCPG core</name>
	<version>0.1.3</version>
	<description>BeCPG repository</description>

	<dependencies>

		<!-- alfresco -->
		<dependency>
			<groupId>fr.becpg</groupId>
			<artifactId>alfresco-sdk</artifactId>
			<version>${alfresco.version}</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>

		<!-- Birt 3.7 -->
		<dependency>
			<groupId>fr.becpg</groupId>
			<artifactId>birt-sdk</artifactId>
			<version>3.7.1</version>
			<type>pom</type>
		</dependency>		

	
		<!-- mysql -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.9</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jmock</groupId>
			<artifactId>jmock</artifactId>
			<version>1.2.0</version>
			<scope>test</scope>
		</dependency>
	
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-mock</artifactId>
			<version>2.0.8</version>
			<scope>test</scope>
		</dependency>
	
		<dependency>
			<groupId>org.alfresco.sdk</groupId>
			<artifactId>spring-webscripts-1.0.0.CI-SNAPSHOT-tests</artifactId>
			<version>3.4</version>
			<scope>provided</scope>
		</dependency>
		
		
		
		<!-- Servlet -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>


		<!-- runtime -->

		<dependency>
			<groupId>net.sf.proguard</groupId>
			<artifactId>proguard</artifactId>
			<version>4.4</version>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>


		<!-- Don't add here amp dependencies as it will break amp packaging -->
		
		
	</dependencies>
	<properties>
		<webapp.name>becpg-core-webapp</webapp.name>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-nosnapshot-plugin</artifactId>
				<groupId>com.sourcesense.maven</groupId>
				<version>0.0.6</version>
				<executions>
					<execution>
						<id>default</id>
						<phase>initialize</phase>
						<goals>
							<goal>strip</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.0-beta-2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<revisionOnScmFailure>1</revisionOnScmFailure>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<!-- native2ascii -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>native2ascii-maven-plugin</artifactId>
				<version>1.0-alpha-1</version>
				<inherited>true</inherited>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>native2ascii</goal>
						</goals>
						<configuration>
							<encoding>8859_1</encoding>
							<dest>target/classes/alfresco/module/${project.groupId}-${project.artifactId}</dest>
							<src>src/main/config</src>
							<includes>
								**/*.properties
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- proguard -->
			<!-- <plugin> <groupId>com.pyx4me</groupId> <artifactId>proguard-maven-plugin</artifactId> 
				<version>2.0.4</version> <executions> <execution> <phase>prepare-package</phase> 
				<goals> <goal>proguard</goal> </goals> </execution> </executions> <configuration> 
				<proguardVersion>4.4</proguardVersion> <obfuscate>true</obfuscate> <injar>classes</injar> 
				<options> <option>-dontoptimize</option> <option>-keepdirectories</option> 
				<option>-renamesourcefileattribute SourceFile</option> <option>-keepattributes 
				Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod</option> 
				<option>-keep public class * { public protected *;}</option> <option>-keepclassmembernames 
				class * {java.lang.Class class$(java.lang.String); java.lang.Class class$(java.lang.String, 
				boolean);}</option> <option>-keepclassmembers enum * {public static **[] 
				values(); public static ** valueOf(java.lang.String);}</option> <option>-keepclassmembers 
				class * implements java.io.Serializable { static final long serialVersionUID; 
				private static final java.io.ObjectStreamField[] serialPersistentFields; 
				private void writeObject(java.io.ObjectOutputStream); private void readObject(java.io.ObjectInputStream); 
				java.lang.Object writeReplace(); java.lang.Object readResolve();}</option> 
				<option>-keep @org.springframework.beans.factory.annotation.Service class 
				*</option> <option>-keep @org.springframework.stereotype.Controller class 
				*</option> <option>-keepclassmembers class * { @org.springframework.beans.factory.annotation.Autowired 
				*; }</option> </options> <libs> <lib>${java.home}/lib/rt.jar</lib> <lib>${java.home}/lib/jsse.jar</lib> 
				</libs> <addMavenDescriptor>false</addMavenDescriptor> </configuration> </plugin> -->
			<plugin>
				<groupId>org.alfresco.maven.plugin</groupId>
				<artifactId>maven-amp-plugin</artifactId>
				<version>3.0.2</version>
				<extensions>true</extensions>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
					<overlays>
						<!-- This sample adds records management module in the finally built 
							AMP <overlay> <groupId>org.org.alfresco</groupId> <artifactId>recordsmanagement</artifactId> 
							<version>2.1.0</version> <type>amp</type> </overlay> -->
						<!-- The current AMP is always last in order to overwrite other modules' 
							modules.properties <overlay></overlay> -->
					</overlays>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
				</configuration>
			</plugin>
		</plugins>
		<!-- Copies and filters resources in build folder so maven-amp-plugin can 
			pick them up -->
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**README-*</exclude>
					<exclude>**/*.csv</exclude>
				</excludes>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.csv</include>
				</includes>
			</resource>
			<!-- Copies and filters AMP config in the proper package 'alfresco/module/becpg.becpg-core' 
				so to enforce full module naming single sourcing from POM properties -->
			<resource>
				<filtering>true</filtering>
				<directory>src/main/config</directory>
				<targetPath>alfresco/module/${project.groupId}-${project.artifactId}</targetPath>
				<excludes>
					<exclude>**README-*</exclude>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<filtering>true</filtering>
				<directory>src/test/resources</directory>
			</testResource>
	<!-- 		<testResource>
				<filtering>true</filtering>
				<directory>.</directory>
				<includes>
					<include>module.properties</include>
				</includes>
				<targetPath>alfresco/module/${project.groupId}-${project.artifactId}</targetPath>
			</testResource> -->
		</testResources>
	</build>
	
</project>
